web/skj.fm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skjfm
  namespace: castopod
  labels:
    app: skjfm
spec:
  ports:
    - port: 8000
      name: skjfm
  selector:
    app: skjfm
